@@ -3,9 +3,9 @@ package template
 import (
 	"testing"
 
-	"github.com/stretchr/testify/assert"
-
 	"github.com/elastic/beats/libbeat/common"
+
+	"github.com/stretchr/testify/assert"
 )
 
 func TestField(t *testing.T) {
